--- a/ppLedc/ppLedc/Info.plist
+++ b/ppLedc/ppLedc/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -61,6 +61,8 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>需要使用相机,需要您的允许</string>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UISupportedInterfaceOrientations</key>
@@ -74,5 +76,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+       <string>移动考勤需要使用您的位置信息</string>
+       <key>NSLocationAlwaysUsageDescription</key>
+       <string>移动考勤需要使用您的位置信息</string>
+       <key>NSLocationUsageDescription</key>
+       <string>移动考勤需要使用您的位置信息</string>
+       <key>NSLocationWhenInUseUsageDescription</key>
+       <string>移动考勤需要使用您的位置信息</string>
 </dict>
 </plist>
