--- a/ppLedc/ppLedc/Info.plist
+++ b/ppLedc/ppLedc/Info.plist
@@ -74,6 +74,8 @@
 	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>UIStatusBarHidden</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
