--- a/ppLedc/ppLedc/Info.plist
+++ b/ppLedc/ppLedc/Info.plist
@@ -61,15 +61,15 @@
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>需要使用相机,需要您的允许</string>
+	<string>需要使用您的相机进行设备二维码扫描绑定，请确认</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>需要使用您的位置信息</string>
+	<string>因需要获取当前使用热点信息，需要您的定位权限</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>需要使用您的位置信息</string>
+	<string>因需要获取当前使用热点信息，需要您的定位权限</string>
 	<key>NSLocationUsageDescription</key>
-	<string>需要使用您的位置信息</string>
+	<string>因需要获取当前使用热点信息，需要您的定位权限</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>需要使用您的位置信息</string>
+	<string>因需要获取当前使用热点信息，需要您的定位权限</string>
 	<key>UILaunchStoryboardName</key>
 	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
